# webextension-adblocker

./: .gitignore  Makefile  README.md  demo.py  manpage  trivial_webext.c
wk-we-adblock/: Cargo.toml  build.rs  wrapper.h
wk-we-adblock/benches/: bench.rs  url_fragments.txt
wk-we-adblock/src/: lib.rs  wk_adblock.rs
