[package]
name = "wk-we-adblock"
version = "0.1.0"
authors = ["david <davidventura27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
