[package]
name = "wk-we-adblock"
version = "0.1.0"
authors = ["david <davidventura27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"
pkg-config = "0.3.19"

[dev-dependencies]
criterion = "0.3.4"
trie-rs = { git = "https://github.com/davidventura/trie-rs" }
twoway = "0.2.1"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[dependencies]
once_cell = "0.2.3"
gobject-sys = "0.10.0"
aho-corasick = "0.7"

[lib]
crate-type = ["cdylib", "lib"]
# Adding lib because of
# https://github.com/rust-lang/cargo/issues/6659

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
